// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateDashboard default view renders 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0;
  margin: 0;
  padding-top: 16px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
    class="c0"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start;"
    >
      <h1
        class="ui header"
        style="margin: 0px;"
      >
        Templates
      </h1>
      <button
        class="ui primary button"
        role="button"
      >
        Create
      </button>
    </div>
  </div>
  .c0 {
  padding: 0;
  margin: 0;
  padding-left: 24px;
  padding-right: 24px;
  margin-bottom: 24px;
}

<div
    class="c0"
  >
    <a
      aria-current="false"
      href="/templates"
      style="color: rgb(0, 0, 0);"
    >
      Stand by Letters of Credit (1) 
    </a>
  </div>
  .c0 {
  padding: 0;
  margin: 0;
  padding-left: 24px;
  padding-right: 24px;
}

<div
    class="c0"
  >
    <div
      class="ReactTable"
    >
      <div
        class="rt-table"
        role="grid"
      >
        <div
          class="rt-thead -header"
          style="min-width: 700px;"
        >
          <div
            class="rt-tr"
            role="row"
          >
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="name"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Name
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="ownerCompanyStaticId"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Owned by
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="createdAt"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Created on
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="createdBy"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Created by
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="updatedAt"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Last modified
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="updatedBy"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Updated by
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th actions-menu rt-resizable-header"
              data-test-id="actionsMenu"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              />
              <div
                class="rt-resizer"
              />
            </div>
          </div>
        </div>
        <div
          class="rt-tbody"
          style="min-width: 700px;"
        >
          <div
            class="rt-tr-group"
            role="rowgroup"
          >
            <div
              class="rt-tr -odd"
              data-test-id="12fee144-bebf-4042-afcb-414223032d13"
              role="row"
              style="cursor: pointer;"
            >
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-name"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  FakeTemplate
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-ownerCompanyStaticId"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    Applicant Name
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-createdAt"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    2019/01/01
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-createdBy"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    Some Username
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-updatedAt"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    2019/01/02
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-updatedBy"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span />
                </span>
              </div>
              <div
                class="rt-td actions-menu"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-actionsMenu"
                role="gridcell"
                style="overflow: visible; flex: 100 0 auto; width: 100px;"
              >
                <div
                  aria-expanded="false"
                  class="ui dropdown"
                  data-test-id="12fee144-bebf-4042-afcb-414223032d13-dropdown"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  />
                  <i
                    aria-hidden="true"
                    class="ellipsis horizontal icon"
                  />
                  <div
                    class="left menu transition"
                  >
                    <div
                      class="item"
                      date-test-id="open-12fee144-bebf-4042-afcb-414223032d13"
                      role="option"
                    >
                      Open
                    </div>
                    <div
                      class="item"
                      date-test-id="delete-12fee144-bebf-4042-afcb-414223032d13"
                      role="option"
                    >
                      Delete
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="-loading"
      >
        <div
          class="-loading-inner"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TemplateDashboard select view renders 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0;
  margin: 0;
  padding-top: 16px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
    class="c0"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start;"
    >
      <h1
        class="ui header"
        style="margin: 0px;"
      >
        Templates
      </h1>
    </div>
  </div>
  .c0 {
  padding: 0;
  margin: 0;
  padding-left: 24px;
  padding-right: 24px;
  margin-bottom: 24px;
}

<div
    class="c0"
  >
    <p>
      Choose an SBLC template to begin your application
    </p>
  </div>
  .c0 {
  padding: 0;
  margin: 0;
  padding-left: 24px;
  padding-right: 24px;
}

<div
    class="c0"
  >
    <div
      class="ReactTable"
    >
      <div
        class="rt-table"
        role="grid"
      >
        <div
          class="rt-thead -header"
          style="min-width: 700px;"
        >
          <div
            class="rt-tr"
            role="row"
          >
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="name"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Name
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="ownerCompanyStaticId"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Owned by
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="createdAt"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Created on
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="createdBy"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Created by
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="updatedAt"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Last modified
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="updatedBy"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: left; display: block;"
                >
                  Updated by
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
            <div
              class="rt-th rt-resizable-header -cursor-pointer"
              data-test-id="createdAt"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="-1"
            >
              <div
                class="rt-resizable-header-content"
              >
                <span
                  style="text-align: right; display: block;"
                >
                  ​ 
                </span>
              </div>
              <div
                class="rt-resizer"
              />
            </div>
          </div>
        </div>
        <div
          class="rt-tbody"
          style="min-width: 700px;"
        >
          <div
            class="rt-tr-group"
            role="rowgroup"
          >
            <div
              class="rt-tr -odd"
              data-test-id="12fee144-bebf-4042-afcb-414223032d13"
              role="row"
              style="cursor: pointer;"
            >
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-name"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  FakeTemplate
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-ownerCompanyStaticId"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    Applicant Name
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-createdAt"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    2019/01/01
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-createdBy"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    Some Username
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-updatedAt"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    2019/01/02
                  </span>
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-updatedBy"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: left; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span />
                </span>
              </div>
              <div
                class="rt-td"
                data-test-id="12fee144-bebf-4042-afcb-414223032d13-createdAt"
                role="gridcell"
                style="overflow: hidden; flex: 100 0 auto; width: 100px;"
              >
                <span
                  style="text-align: right; display: block; overflow: hidden; text-overflow: ellipsis;"
                >
                  <span>
                    <button
                      class="ui button"
                      data-test-id="select-12fee144-bebf-4042-afcb-414223032d13"
                      role="button"
                    >
                      Select
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="-loading"
      >
        <div
          class="-loading-inner"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
